# openwhisper

./: .gitignore  pyproject.toml
.github/workflows/: backend.yml  python-lint-format.yml  swift.yml
Desktop/Contents/: Info.plist
Desktop/Contents/MacOS/: openwhisper
Desktop/Contents/Resources/: Info.plist
Desktop/Contents/_CodeSignature/: CodeResources
backend/: .dockerignore  .env.example  API.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml  transcribe.py
backend/docs/: DOCKER_SETUP.md
backend/routes/: __init__.py  health.py  transcribe.py
backend/schemas/: __init__.py  transcribe.py
backend/services/: text_cleaner.py  transcription.py
docs/: API.md
macos-app/: .swiftformat  .swiftlint.yml
macos-app/openwhisper/: APIService.swift  AudioRecorder.swift  ContentView.swift  HotkeyManager.swift  Info.plist  RecordingHUD.swift  SettingsManager.swift  SettingsView.swift  TextTyper.swift  openwhisper.entitlements  openwhisperApp.swift
macos-app/openwhisper.xcodeproj/: project.pbxproj
